--- a/src/UI/Blazor/_Imports.razor
+++ b/src/UI/Blazor/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Blazor.Starter
-@using Blazor.Starter.Layout
+@using Starter.Blazor
+@using Starter.Blazor.Layout
