--- a/src/UI/Angular/src/app/module/auth/pages/signup/signup.component.html
+++ b/src/UI/Angular/src/app/module/auth/pages/signup/signup.component.html
@@ -2,20 +2,29 @@
   class="flex min-h-screen items-center justify-center bg-[url('/assets/images/map.svg')] bg-cover bg-center dark:bg-[url('/assets/images/map-dark.svg')]"
 >
   <div class="panel m-6 w-full max-w-lg sm:w-[480px]">
-    <h2 class="mb-3 text-2xl font-bold">Sign In</h2>
-    <p class="mb-7">Enter your email and password to login</p>
+    <h2 class="mb-3 text-2xl font-bold">Sign Up</h2>
+    <p class="mb-7">Enter your email and password to register</p>
     <form
       class="space-y-5"
-      [formGroup]="formSignin"
-      (ngSubmit)="submitFormSignin()"
+      [formGroup]="formSignup"
+      (ngSubmit)="submitFormSignup()"
       novalidate
     >
+      <div>
+        <label for="name">Name</label>
+        <app-input
+          formControlName="name"
+          [control]="formSignup.controls['name']"
+          [isSubmit]="isSubmitFormSignup"
+          placeholder="Enter Name"
+        ></app-input>
+      </div>
       <div>
         <label for="email">Email</label>
         <app-input
           formControlName="email"
-          [control]="formSignin.controls['email']"
-          [isSubmit]="isSubmitFormSignin"
+          [control]="formSignup.controls['email']"
+          [isSubmit]="isSubmitFormSignup"
           placeholder="Enter Email"
         ></app-input>
       </div>
@@ -24,13 +33,13 @@
         <app-input
           formControlName="password"
           type="password"
-          [control]="formSignin.controls['password']"
-          [isSubmit]="isSubmitFormSignin"
+          [control]="formSignup.controls['password']"
+          [isSubmit]="isSubmitFormSignup"
           placeholder="Enter Password"
         ></app-input>
       </div>
       <app-button
-        text="SIGN IN"
+        text="SIGN UP"
         type="submit"
         classes="btn-primary w-full"
         class="d-block"
@@ -87,12 +96,12 @@
       </li>
     </ul>
     <p class="text-center">
-      Dont't have an account ?
+      Already have an account ?
       <app-anchor
-      text="Sign Up"
-      [routerLink]="signupRoute"
-      classes="font-bold text-primary"
-    ></app-anchor>
+        text="Sign In"
+        [routerLink]="signinRoute"
+        classes="font-bold text-primary"
+      ></app-anchor>
     </p>
   </div>
 </div>
