--- a/src/UI/Angular/src/app/core/layouts/sidebar.html
+++ b/src/UI/Angular/src/app/core/layouts/sidebar.html
@@ -68,7 +68,7 @@
             <ul>
               <li class="nav-item">
                 <a
-                  routerLink="/apps/todolist"
+                  [routerLink]="routes.todo"
                   class="group"
                   routerLinkActive="active"
                   (click)="toggleMobileMenu()"
