User-List Page with Filters & Refresh Token Logic Verified.

--- a/src/UI/Angular/src/app/core/layouts/header.html
+++ b/src/UI/Angular/src/app/core/layouts/header.html
@@ -481,8 +481,8 @@
       </a>
       <ul class="sub-menu">
         <li>
-          <a [routerLink]="routes.todo" routerLinkActive="active"
-            >{{ 'todo_list' | translate }}</a
+          <a [routerLink]="routes.users" routerLinkActive="active"
+            >{{ 'list_users' | translate }}</a
           >
         </li>
       </ul>
