--- a/src/UI/Angular/src/app/core/layouts/sidebar.html
+++ b/src/UI/Angular/src/app/core/layouts/sidebar.html
@@ -68,7 +68,7 @@
             <ul>
               <li class="nav-item">
                 <a
-                  [routerLink]="routes.todo"
+                  [routerLink]="routes.users"
                   class="group"
                   routerLinkActive="active"
                   (click)="toggleMobileMenu()"
@@ -97,7 +97,7 @@
 
                     <span
                       class="text-black ltr:pl-3 rtl:pr-3 dark:text-[#506690] dark:group-hover:text-white-dark"
-                      >{{ 'todo_list' | translate }}</span
+                      >{{ 'list_users' | translate }}</span
                     >
                   </div>
                 </a>
