--- a/src/UI/Angular/src/app/module/auth/pages/signin/signin.component.html
+++ b/src/UI/Angular/src/app/module/auth/pages/signin/signin.component.html
@@ -95,10 +95,7 @@
     </ul>
     <p class="d-none text-center">
       Dont't have an account ?
-      <app-anchor
-        text="Sign Up"
-        classes="font-bold text-primary"
-      ></app-anchor>
+      <app-anchor text="Sign Up" classes="font-bold text-primary"></app-anchor>
     </p>
   </div>
 </div>
