--- a/src/UI/Angular/src/assets/css/tailwind.css
+++ b/src/UI/Angular/src/assets/css/tailwind.css
@@ -1,5 +1,14 @@
+/* animation */
+@import 'animate.css';
+
 /* sweetalert */
 @import 'sweetalert.css';
+
+/* vue3-datatable */
+@import 'datatable.css';
+
+/* modal popup */
+@import 'modal.css';
 
 @tailwind base;
 @tailwind components;
