--- a/src/UI/Blazor/Modules/Projects/Components/CreateProject.razor
+++ b/src/UI/Blazor/Modules/Projects/Components/CreateProject.razor
@@ -48,7 +48,7 @@
                 Description = description,
                 StartDate = startDate,
                 EndDate = endDate,
-                EstimatedHours = estimatedHours,
+               //EstimatedHours = estimatedHours,
             };
 
         try
