--- a/src/UI/Angular/src/app/module/User/components/invite-user-modal/invite-user-modal.component.html
+++ b/src/UI/Angular/src/app/module/User/components/invite-user-modal/invite-user-modal.component.html
@@ -1,7 +1,7 @@
 <modal
   #modalComponent
   class="modal-center animate animate-fade-in"
-  (onClose)="resetForm()"
+  (onCancel)="resetForm()"
 >
   <ng-template #modalHeader> <div>Invite User</div> </ng-template>
   <ng-template #modalBody>
