--- a/src/UI/Angular/src/app/shared/ui/modal/modal.component.html
+++ b/src/UI/Angular/src/app/shared/ui/modal/modal.component.html
@@ -4,12 +4,20 @@
     role="dialog"
     tabindex="-1"
     [class.in]="visibleAnimate"
-    >
+  >
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <ng-container *ngTemplateOutlet="header"></ng-container>
-          <button class="close" data-dismiss="modal" type="button" aria-label="Close" (click)="close()">×</button>
+          <button
+            class="close"
+            data-dismiss="modal"
+            type="button"
+            aria-label="Close"
+            (click)="close(); onCancel.emit()"
+          >
+            ×
+          </button>
         </div>
         <div class="modal-body">
           <ng-container *ngTemplateOutlet="body"></ng-container>
