--- a/src/UI/Blazor/_Imports.razor
+++ b/src/UI/Blazor/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using Starter.Blazor
 @using Starter.Blazor.Layout
+@using Starter.Blazor.Modules.Login.Model
+@using Microsoft.AspNetCore.Components.Authorization
+@using Blazored.LocalStorage
