--- a/src/UI/Blazor/Layout/Public/MainLayout.razor
+++ b/src/UI/Blazor/Layout/Public/MainLayout.razor
@@ -1,14 +1,14 @@
 ﻿@inherits LayoutComponentBase
+@inject NavigationManager NavigationManager
 
 
 
 
+<!-- sidebar menu overlay -->
+<div x-cloak class="fixed inset-0 z-50 bg-[black]/60 lg:hidden" :class="{'hidden' : !$store.app.sidebar}" @click="$store.app.toggleSidebar()"></div>
 
-    <!-- sidebar menu overlay -->
-    <div x-cloak class="fixed inset-0 z-50 bg-[black]/60 lg:hidden" :class="{'hidden' : !$store.app.sidebar}" @click="$store.app.toggleSidebar()"></div>
-
-    <!-- screen loader -->
-    @* <div class="screen_loader animate__animated fixed inset-0 z-[60] grid place-content-center bg-[#fafafa] dark:bg-[#060818]">
+<!-- screen loader -->
+@* <div class="screen_loader animate__animated fixed inset-0 z-[60] grid place-content-center bg-[#fafafa] dark:bg-[#060818]">
         <svg width="64" height="64" viewBox="0 0 135 135" xmlns="http://www.w3.org/2000/svg" fill="#4361ee">
             <path d="M67.447 58c5.523 0 10-4.477 10-10s-4.477-10-10-10-10 4.477-10 10 4.477 10 10 10zm9.448 9.447c0 5.523 4.477 10 10 10 5.522 0 10-4.477 10-10s-4.478-10-10-10c-5.523 0-10 4.477-10 10zm-9.448 9.448c-5.523 0-10 4.477-10 10 0 5.522 4.477 10 10 10s10-4.478 10-10c0-5.523-4.477-10-10-10zM58 67.447c0-5.523-4.477-10-10-10s-10 4.477-10 10 4.477 10 10 10 10-4.477 10-10z">
                 <animateTransform attributeName="transform" type="rotate" from="0 67 67" to="-360 67 67" dur="2.5s" repeatCount="indefinite" />
@@ -19,48 +19,49 @@
         </svg>
     </div> *@
 
-    <!-- scroll to top button -->
-    <div class="fixed bottom-6 z-50 ltr:right-6 rtl:left-6" x-data="scrollToTop">
-        <template x-if="showTopButton">
-            <button type="button"
-                    class="btn btn-outline-primary animate-pulse rounded-full bg-[#fafafa] p-2 dark:bg-[#060818] dark:hover:bg-primary"
-                    @click="goToTop">
-                <svg width="24" height="24" class="h-4 w-4" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path opacity="0.5"
-                          fill-rule="evenodd"
-                          clip-rule="evenodd"
-                          d="M12 20.75C12.4142 20.75 12.75 20.4142 12.75 20L12.75 10.75L11.25 10.75L11.25 20C11.25 20.4142 11.5858 20.75 12 20.75Z"
-                          fill="currentColor" />
-                    <path d="M6.00002 10.75C5.69667 10.75 5.4232 10.5673 5.30711 10.287C5.19103 10.0068 5.25519 9.68417 5.46969 9.46967L11.4697 3.46967C11.6103 3.32902 11.8011 3.25 12 3.25C12.1989 3.25 12.3897 3.32902 12.5304 3.46967L18.5304 9.46967C18.7449 9.68417 18.809 10.0068 18.6929 10.287C18.5768 10.5673 18.3034 10.75 18 10.75L6.00002 10.75Z"
-                          fill="currentColor" />
-                </svg>
-            </button>
-        </template>
-    </div>
+<!-- scroll to top button -->
+<div class="fixed bottom-6 z-50 ltr:right-6 rtl:left-6" x-data="scrollToTop">
+    <template x-if="showTopButton">
+        <button type="button"
+                class="btn btn-outline-primary animate-pulse rounded-full bg-[#fafafa] p-2 dark:bg-[#060818] dark:hover:bg-primary"
+                @click="goToTop">
+            <svg width="24" height="24" class="h-4 w-4" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path opacity="0.5"
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M12 20.75C12.4142 20.75 12.75 20.4142 12.75 20L12.75 10.75L11.25 10.75L11.25 20C11.25 20.4142 11.5858 20.75 12 20.75Z"
+                      fill="currentColor" />
+                <path d="M6.00002 10.75C5.69667 10.75 5.4232 10.5673 5.30711 10.287C5.19103 10.0068 5.25519 9.68417 5.46969 9.46967L11.4697 3.46967C11.6103 3.32902 11.8011 3.25 12 3.25C12.1989 3.25 12.3897 3.32902 12.5304 3.46967L18.5304 9.46967C18.7449 9.68417 18.809 10.0068 18.6929 10.287C18.5768 10.5673 18.3034 10.75 18 10.75L6.00002 10.75Z"
+                      fill="currentColor" />
+            </svg>
+        </button>
+    </template>
+</div>
 
-   <ThemeCustomizer></ThemeCustomizer>
+@* <ThemeCustomizer></ThemeCustomizer> *@
 
 <div class="main-container min-h-screen text-black dark:text-white-dark" :class="[$store.app.navbar]">
-        <!-- start sidebar section -->
-            <NavMenu></NavMenu>
-        <!-- end sidebar section -->
+    @if (!IsLoginPage()) // Conditionally render based on login page
+    {
+        <NavMenu></NavMenu>
         <div class="main-content">
-            <!-- start header section -->
             <Header></Header>
-            <!-- end header section -->
 
             <div class="animate__animated p-6 [$store.app.animation]">
-                <!-- start main content section -->
                 @Body
-                <!-- end main content section -->
-                <!-- start footer section -->
                 <Footer />
-                <!-- end footer section -->
             </div>
         </div>
-    </div>
+    }
+    else
+    {
+        @Body
+    }
+</div>
 
-    
-    
+
+@code {
+    bool IsLoginPage() => NavigationManager.Uri.Contains("login", StringComparison.OrdinalIgnoreCase);
+}
 
 
