--- a/src/UI/Angular/src/app/module/auth/pages/accept-invitation/accept-invitation.component.html
+++ b/src/UI/Angular/src/app/module/auth/pages/accept-invitation/accept-invitation.component.html
@@ -49,14 +49,15 @@
         ></app-input>
       </div>
       <app-button
-        text="Create An Account"
+        text="CREATE AN ACCOUNTANT"
         type="submit"
         classes="btn-primary w-full"
         class="d-block"
       ></app-button>
     </form>
     <div
-      class="relative my-7 h-5 text-center before:absolute before:inset-0 before:m-auto before:h-[1px] before:w-full before:bg-[#ebedf2] dark:before:bg-[#253b5c]"
+      style="margin-top: 1rem; margin-bottom: 1rem"
+      class="relative h-5 text-center before:absolute before:inset-0 before:m-auto before:h-[1px] before:w-full before:bg-[#ebedf2] dark:before:bg-[#253b5c]"
     ></div>
     <p class="text-center">
       Already have an account ?
