--- a/src/UI/Blazor/Modules/Login/Components/Login.razor
+++ b/src/UI/Blazor/Modules/Login/Components/Login.razor
@@ -1,6 +1,9 @@
 ﻿@page "/login"
 @using System.Text
 @using System.Text.Json
+@using Blazored.LocalStorage
+@using Microsoft.AspNetCore.Components.Authorization
+@using Starter.Blazor.Modules.Login.Model
 @using Starter.Blazor.Modules.Login.Services
 @inject HttpClient httpClient
 @inject IJSRuntime jsRuntime
