Invite user API integration

--- a/src/UI/Blazor/Modules/User/Pages/User.razor
+++ b/src/UI/Blazor/Modules/User/Pages/User.razor
@@ -81,7 +81,8 @@
     private List<UserlistDto> users = new List<UserlistDto>();
     private PaginationRequest param  = new PaginationRequest { PageNumber = 0, PageSize = 10, OrderBy = new[] { "FullName" }};
     private InviteUserDto inviteUser = new InviteUserDto(); 
-   
+    private bool openModal = false;
+
     protected override async Task OnInitializedAsync()
     {
         users = await UserService.GetUserlistsAsync(param);
@@ -90,5 +91,14 @@
     private async Task InviteUser()
     {
         var result = await UserService.InviteUserAsync(inviteUser);
+        if (result.Success)
+        {
+            openModal = false;
+        }
+    }
+
+    private void toggle()
+    {
+        openModal = !openModal;
     }
 }
