--- a/src/UI/Blazor/Modules/Login/Components/Login.razor
+++ b/src/UI/Blazor/Modules/Login/Components/Login.razor
@@ -1,7 +1,9 @@
 ﻿@page "/login"
 @using System.Text
 @using System.Text.Json
+@using Starter.Blazor.Core
 @using Starter.Blazor.Modules.Login.Services
+@using System.IdentityModel.Tokens.Jwt
 @inject HttpClient httpClient
 @inject IJSRuntime jsRuntime
 @inject NavigationManager navigationManager
@@ -119,25 +121,26 @@
 @code {
     private loginModel LoginDto = new loginModel();
 
+    [Inject]
+    public HttpInterceptorService Interceptor { get; set; }
+
     private async Task HandleLogin()
     {
-        // var response = await httpClient.PostAsJsonAsync<loginModel>("api/auth/signin", LoginDto);
         var response = await AuthService.Login(LoginDto);
-
         if (response != null)
         {
-            if (response != null)
-            {
-                //errorMessage = string.Empty;
-
-                await LocalStorage.SetItemAsync("authToken", response.Token);
-                await AuthenticationStateProvider.GetAuthenticationStateAsync();
-                navigationManager.NavigateTo("/");
-            }
-            else
-            {
-                //errorMessage = result.Messages.FirstOrDefault();
-            }
+            Interceptor.RegisterEvent();
+            await LocalStorage.SetItemAsync("authToken", response.Token);
+            await AuthenticationStateProvider.GetAuthenticationStateAsync();
+            navigationManager.NavigateTo("/");
         }
+        else
+        {
+        }
+    }
+
+    public void Dispose()
+    {
+        Interceptor.DisposeEvent();
     }
 }
