--- a/src/UI/Blazor/Shared/CustomGrid/GridBody.razor
+++ b/src/UI/Blazor/Shared/CustomGrid/GridBody.razor
@@ -13,6 +13,6 @@
 
 
 @code {
-    [Parameter] public List<Dictionary<string, object>> DisplayedData { get; set; }
+    [Parameter] public List<TItem> DisplayedData { get; set; }
     [Parameter] public List<Dictionary<string, string>> HeaderInfo { get; set; }
 }
