--- a/src/UI/Angular/src/app/module/User/components/invite-user-modal/invite-user-modal.component.html
+++ b/src/UI/Angular/src/app/module/User/components/invite-user-modal/invite-user-modal.component.html
@@ -2,6 +2,7 @@
   #modalComponent
   class="modal-center animate animate-fade-in"
   (onCancel)="resetForm()"
+  [closeOnOutsideClick]="false"
 >
   <ng-template #modalHeader> <div>Invite User</div> </ng-template>
   <ng-template #modalBody>
