--- a/src/UI/Angular/src/app/module/auth/pages/reset-password/reset-password.component.html
+++ b/src/UI/Angular/src/app/module/auth/pages/reset-password/reset-password.component.html
@@ -40,7 +40,7 @@
           formResetPassword.errors?.["passwordMismatch"] &&
           formResetPassword.controls["cpassword"].value
         ) {
-          <p class="mt-1 text-danger">Passwords do not match.</p>
+          <p class="mt-1 text-danger">Password do not match.</p>
         }
       </div>
       <app-button
