--- a/src/UI/Blazor/Modules/User/Pages/User.razor
+++ b/src/UI/Blazor/Modules/User/Pages/User.razor
@@ -50,10 +50,8 @@
     </div>
 </div>
 
-
     <!-- button -->
     
-
     <!-- modal -->
     <div class="fixed inset-0 bg-[black]/60 z-[999] hidden overflow-y-auto" :class="open && '!block'">
         <div class="flex items-center justify-center min-h-screen px-4">
@@ -77,7 +75,8 @@
                     </button>
                 </div>
                 <div class="p-5">
-                    <form @onsubmit="InviteUser">
+                    <EditForm Model="@inviteUser" OnValidSubmit="InviteUser">
+                        <DataAnnotationsValidator />
                         <div class="relative mb-4">
                             <span class="absolute top-1/2 -translate-y-1/2 ltr:left-3 rtl:right-3 dark:text-white-dark">
                                 <svg width="24"
@@ -96,8 +95,11 @@
                                              stroke-width="1.5" />
                                 </svg>
                             </span>
-                            <input type="text" placeholder="First Name" class="form-input ltr:pl-10 rtl:pr-10" @bind="inviteUser.FirstName" />
+                            <input type="text" placeholder="First Name" class="form-input ltr:pl-10 rtl:pr-10" @bind-value="inviteUser.FirstName" />
+                                <p class="mt-1 text-danger"><ValidationMessage For="@(() => inviteUser.FirstName)" /></p>
                         </div>
+
+
                         <div class="relative mb-4">
                             <span class="absolute top-1/2 -translate-y-1/2 ltr:left-3 rtl:right-3 dark:text-white-dark">
                                 <svg width="24"
@@ -136,10 +138,11 @@
                                           stroke-width="1.5" />
                                 </svg>
                             </span>
-                            <input type="email" placeholder="Email" class="form-input ltr:pl-10 rtl:pr-10" @bind="inviteUser.Email" />
+                            <input type="text" placeholder="Email" class="form-input ltr:pl-10 rtl:pr-10" @bind="inviteUser.Email" />
+                            <ValidationMessage For="@(() => inviteUser.Email)" />
                         </div>
                         <button type="submit" class="btn btn-primary w-full">Invite</button>
-                    </form>
+                    </EditForm>
                 </div>
             </div>
         </div>
@@ -150,7 +153,6 @@
     private List<UserlistDto> users = new List<UserlistDto>();
     private PaginationRequest param  = new PaginationRequest { PageNumber = 0, PageSize = 10, OrderBy = new[] { "FullName" }};
     private InviteUserDto inviteUser = new InviteUserDto(); 
-    private bool openModal = false;
     private readonly string toastScriptConstant = @"
         const toast = window.Swal.mixin({
             toast: true,
@@ -178,14 +180,7 @@
 
             users = await UserService.GetUserlistsAsync(param);
             StateHasChanged();
-
-            openModal = false;
         }
-    }
-
-    private void toggle()
-    {
-        openModal = !openModal;
     }
 
     private void showToaster(string msg, string position)
