--- a/src/UI/Angular/src/app/core/layouts/header.html
+++ b/src/UI/Angular/src/app/core/layouts/header.html
@@ -251,23 +251,21 @@
                   />
                 </div>
                 <div class="truncate ltr:pl-4 rtl:pr-4">
-                  <h4 class="text-base">
-                    John Doe<span
-                      class="rounded bg-success-light px-1 text-xs text-success ltr:ml-2 rtl:ml-2"
-                      >Pro</span
-                    >
+                  <h4 class="text-base" [title]="profileFromSignal()?.name">
+                    {{profileFromSignal()?.name}}
                   </h4>
-                  <a
-                    class="text-black/60 hover:text-primary dark:text-dark-light/60 dark:hover:text-white"
-                    href="javascript:;"
-                    >johndoe&#64;gmail.com</a
+                  <p
+                    [title]="profileFromSignal()?.email"
+                    class="text-black/60 dark:text-dark-light/60"
                   >
+                    {{profileFromSignal()?.email}}
+                  </p>
                 </div>
               </div>
             </li>
             <li>
               <a
-                routerLink="/profile"
+                [routerLink]="routes.profile"
                 *hlMenuItem="let menuItem"
                 class="dark:hover:text-white"
               >
