--- a/src/UI/Angular/src/app/module/User/pages/profile/profile.component.html
+++ b/src/UI/Angular/src/app/module/User/pages/profile/profile.component.html
@@ -4,7 +4,7 @@
       <form
         class="mb-5 rounded-md border border-[#ebedf2] bg-white p-4 dark:border-[#191e3a] dark:bg-[#0e1726]"
       >
-        <h6 class="mb-5 text-lg font-bold">General Information</h6>
+        <h6 class="mb-5 text-lg font-bold">Profile Information</h6>
         <div class="flex flex-col sm:flex-row">
           <div class="mb-5 w-full sm:w-2/12 ltr:sm:mr-4 rtl:sm:ml-4">
             <img
