--- a/src/UI/Angular/src/app/core/layouts/header.html
+++ b/src/UI/Angular/src/app/core/layouts/header.html
@@ -232,7 +232,7 @@
           <button type="button" hlMenuButton class="group relative block">
             <img
               class="h-9 w-9 rounded-full object-cover saturate-50 group-hover:saturate-100"
-              src="/assets/images/user-profile.jpeg"
+              src="/assets/images/default_profile.png"
               alt=""
             />
           </button>
@@ -246,7 +246,7 @@
                 <div class="flex-none">
                   <img
                     class="h-10 w-10 rounded-md object-cover"
-                    src="/assets/images/user-profile.jpeg"
+                    src="/assets/images/default_profile.png"
                     alt=""
                   />
                 </div>
