--- a/src/UI/Blazor/_Imports.razor
+++ b/src/UI/Blazor/_Imports.razor
@@ -11,3 +11,4 @@
 @using Starter.Blazor.Modules.Login.Model
 @using Microsoft.AspNetCore.Components.Authorization
 @using Blazored.LocalStorage
+@using Starter.Blazor.Modules.User.Models
