--- a/src/UI/Blazor/Layout/Public/Header.razor
+++ b/src/UI/Blazor/Layout/Public/Header.razor
@@ -143,7 +143,7 @@
                             </div>
                         </li>
                         <li>
-                            <a href="users-profile.html" class="dark:hover:text-white" @click="toggle">
+                            <a href="/update-profile" class="dark:hover:text-white" @click="toggle">
                                 <svg class="h-4.5 w-4.5 shrink-0 ltr:mr-2 rtl:ml-2"
                                      width="18"
                                      height="18"
@@ -156,7 +156,7 @@
                                           stroke="currentColor"
                                           stroke-width="1.5" />
                                 </svg>
-                                Profile
+                                Update Profile
                             </a>
                         </li>
                         <li>
