toast message for user already exist invite user

--- a/src/UI/Blazor/Modules/User/Pages/User.razor
+++ b/src/UI/Blazor/Modules/User/Pages/User.razor
@@ -181,6 +181,10 @@
             users = await UserService.GetUserlistsAsync(param);
             StateHasChanged();
         }
+        else
+        {
+            showToaster(result.Messages.FirstOrDefault(), "top");
+        }
     }
 
     private void showToaster(string msg, string position)
