--- a/src/UI/Blazor/Layout/Public/NavMenu.razor
+++ b/src/UI/Blazor/Layout/Public/NavMenu.razor
@@ -39,7 +39,7 @@
             <li class="nav-item">
                 <ul>
                     <li class="nav-item">
-                        <a href="/" class="group">
+                            <a href="/dashboard" class="group">
                             <div class="flex items-center">
                                 <svg class="shrink-0 group-hover:!text-primary"
                                      width="20"
@@ -59,6 +59,7 @@
                             </div>
                         </a>
                     </li>
+
 
                     <li class="nav-item">
                             <a href="/userlist" class="group">
@@ -81,6 +82,7 @@
                             </div>
                         </a>
                     </li>
+                       
 
                     <li class="nav-item">
                         <a href="/todolist" class="group">
