--- a/src/UI/Blazor/Modules/Dashboard/Components/Dashboard.razor
+++ b/src/UI/Blazor/Modules/Dashboard/Components/Dashboard.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/dashboard"
 @using Microsoft.AspNetCore.Authorization
 @using Starter.Blazor.Modules.Login.Services
 @inject AuthenticationStateProvider AuthenticationStateProvider
