--- a/src/UI/Blazor/Modules/Login/Components/Login.razor
+++ b/src/UI/Blazor/Modules/Login/Components/Login.razor
@@ -1,7 +1,8 @@
-﻿@page "/login"
+﻿@page "/"
 @using System.Text
 @using System.Text.Json
 @using Starter.Blazor.Modules.Login.Services
+@layout Layout.Public.AuthLayout
 @inject HttpClient httpClient
 @inject IJSRuntime jsRuntime
 @inject NavigationManager navigationManager
