SHown Initials If Profile Pic Is Not Exist.

--- a/src/UI/Angular/src/app/core/layouts/header.html
+++ b/src/UI/Angular/src/app/core/layouts/header.html
@@ -230,11 +230,20 @@
       <div class="dropdown shrink-0">
         <div hlMenu class="!block">
           <button type="button" hlMenuButton class="group relative block">
+            @if (profileFromSignal()?.imageUrl) {
             <img
               class="h-9 w-9 rounded-full object-cover saturate-50 group-hover:saturate-100"
               src="/assets/images/default_profile.png"
               alt=""
-            />
+            />}@else {
+            <div
+              class="grid h-9 w-9 place-content-center rounded-full bg-gray-300 text-sm font-semibold dark:bg-gray-700 ng-tns-c41-2 ng-star-inserted"
+            >
+              {{profileFromSignal()?.name?.charAt(0)+ '' +
+              profileFromSignal()?.name?.charAt((profileFromSignal()?.name?.indexOf('
+              ')??0) + 1) }}
+            </div>
+            }
           </button>
           <ul
             *hlMenuItems
@@ -244,11 +253,21 @@
             <li>
               <div class="flex items-center px-4 py-4">
                 <div class="flex-none">
+                  @if (profileFromSignal()?.imageUrl) {
                   <img
                     class="h-10 w-10 rounded-md object-cover"
                     src="/assets/images/default_profile.png"
                     alt=""
                   />
+                  }@else {
+                  <div
+                    class="grid h-10 w-10 place-content-center rounded-full bg-gray-300 text-sm font-semibold dark:bg-gray-700 ng-tns-c41-2 ng-star-inserted"
+                  >
+                    {{profileFromSignal()?.name?.charAt(0)+ '' +
+                    profileFromSignal()?.name?.charAt((profileFromSignal()?.name?.indexOf('
+                    ')??0) + 1) }}
+                  </div>
+                  }
                 </div>
                 <div class="truncate ltr:pl-4 rtl:pr-4">
                   <h4 class="text-base" [title]="profileFromSignal()?.name">
