--- a/src/UI/Angular/src/app/shared/ui/input/input.component.html
+++ b/src/UI/Angular/src/app/shared/ui/input/input.component.html
@@ -36,13 +36,13 @@
       Maximum value is {{ control.errors["max"].max }}
     </p>
   }
-  <!-- @if (control.errors["pattern"]) {
-    <p class="mt-1 text-danger">Invalid pattern, please check the format</p>
-  }-->
   @if (isSubmit && control.errors?.["pattern"] && type == "password") {
     <p class="mt-1 text-danger">
       Password requirements: At least one uppercase letter (A-Z), one lowercase
       letter (a-z), and one non-alphanumeric character.
     </p>
+  }
+  @if (isSubmit && control.errors?.["pattern"]) {
+    <p class="mt-1 text-danger">Invalid input.</p>
   }
 </div>
